client/views/courses/compact/_course.compact.scss
// *** Course compact ***
//=================

// ** Wrap
//========================================================================================
.course-compact-wrap {
	@include td-make-xs-column(12);
	padding: ($grid-gutter-width / 4) ($grid-gutter-width / 2);
}

.container .course-compact-wrap {
	@media (min-width: $screen-xsm) {
		@include td-make-xs-column(6);
		@include td-make-md-column(4);
		@include td-make-lg-column(3);
		padding: ($grid-gutter-width / 4) ($grid-gutter-width / 8);
	}
}

.container-sm .course-compact-wrap {
	@media (min-width: $screen-xsm) {
		@include td-make-xs-column(6);
		padding: ($grid-gutter-width / 4) ($grid-gutter-width / 8);
	}
}

// ** Compact
//========================================================================================
.course-compact {
	height: 150px;
	position: relative;
	transition-duration: .15s;
	transition-property: #{'box-shadow opacity'};

	&:hover {
		box-shadow: $shadow-lg-offset-x $shadow-lg-offset-y $shadow-lg-blur $default-shadow;
	}

	&.proposal,
	&.has-past-events {
		border-width: $course-border-width;
		border-color: $course-border-color;
	}

	&.proposal {
		border-style: $proposal-border-style;
	}

	&.has-past-events {
		border-style: $has-past-events-border-style;
	}

	&.has-upcoming-events {
		background: $has-upcoming-events-bg;
	}

	&.filter-no-match,
	&.filter-no-match-delayed {
		transition-duration: .5s;
		transition-property: opacity;
	}

	&.filter-no-match-delayed {
		transition-delay: .3s;
	}
}

// ** Content
//========================================================================================
.course-compact-content {
	@include td-make-xs-column(9);
	background: $body-bg;
	@include td-padding-all(0, 0, 0, 15px);

}

.has-upcoming-events > .course-compact-content {
	@include td-make-xs-column(7.5);
	background: $has-upcoming-events-bg;
	@include td-padding-all(0, 5px, 0, 15px);
}

// ** Title
//========================================================================================
.course-compact-title {
	color: $gray-dark;
	line-height: 24px;
	margin: 8px 0 0;
	max-height: 60px;
}

.course-compact-title > h4 {
	font-size: 20px;
	line-height: 20px;
}

// ** Categories
//========================================================================================
.course-compact-content > .course-categories {
	height: 55px;
	margin-bottom: 0;
	@include td-margin(left, -2px);
	overflow: hidden;
}

// ** Event
//========================================================================================
.course-compact-next-event {
	@include td-make-xs-column(4.5);
	background: $course-compact-next-event-bg;
	color: $course-compact-next-event-color;
	max-height: 150px;
	padding: 3px;
	position: relative;
	text-align: center;
}

.course-compact-next-event-time,
.course-compact-next-event-date {
	@include td-make-xs-column(12);
	padding: 0;
}

.course-compact-next-event-venue {
	@include ellipsis;
	padding: 0 4px;
}

// ** Roles
//========================================================================================
.course-compact-roles {
	@include td-make-xs-column(3);
	padding: 0;
	position: relative;
	@include td-pos(right, -7px);
	top: -7px;
}

.course-compact-role {
	text-align: center;

	&:not(:first-child) {
		margin-top: 3px;
	}
}

.course-compact-role-needed {
	background-color: $role-needed-bg;
	color: $role-needed-color;
}

.course-compact-role-occupied {
	$background-color: $green;

	background-color: $background-color;
	color: desaturate(darken($background-color, 40%), 50%);
}

.course-compact-role-occupied-by-user {
	background-color: $user-bg;
	color: desaturate(darken($user-bg, 40%), 80%);
}

// ** Grouplist
//========================================================================================
.course-compact > .grouplist {
	margin: 0;
	position: absolute;
}

.course-compact.proposal > .grouplist,
.course-compact.has-past-events > .grouplist {
	bottom: $course-border-width;
	@include td-pos(right, $course-border-width);
}

.course-compact.has-upcoming-events > .grouplist {
	bottom: $course-border-width * 2;
	@include td-pos(right, $course-border-width * 2);
}

.course-compact > .grouplist > li {
	@include td-float(right);
	@include td-margin(left, 4px);
}

